--- a/index.html
+++ b/index.html
@@ -8,8 +8,48 @@
     <title>Signup form</title>
 </head>
 <body>
-    <script src="script.js">
-
-    </script>
+    <main>
+        <section class="lead">
+            <div class="layer">
+                <img src="" alt="logo">
+                <h1>Night</h1>
+            </div>
+            <span>Photo by <a href="https://www.pexels.com/photo/urban-photo-of-an-alley-2411688/">Aleksandar Pasaric</a></span>
+        </section>
+        <section>
+           <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
+           <span>Sign up <em>now</em> to get started.</span> 
+           <p>You <em>know</em> you want to.</p>
+           <form action="#" method="post" class="form">
+                <h2>Let's do this!</h2>
+                <div class="input_wrapper">
+                    <label for="name">First name</label>
+                    <input type="text" id="name" name="name">
+                </div>
+                <div class="input_wrapper">
+                    <label for="surname">Last name</label>
+                    <input type="text" id="surname" name="surname">
+                </div>
+                <div class="input_wrapper">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email">
+                </div>
+                <div class="input_wrapper">
+                    <label for="number">Number</label>
+                    <input type="number" name="number" id="number">
+                </div>
+                <div class="input_wrapper">
+                    <label for="password">Password</label>
+                    <input type="password" name="password" id="password">
+                </div>
+                <div class="input_wrapper">
+                    <label for="conpassword">Confirm password</label>
+                    <input type="password" name="conpassword" id="conpassword">
+                </div>
+                <button type="submit" class="btn btn--primary"></button>
+           </form>
+        </section>
+    </main>
+    <script src="script.js"></script>
 </body>
 </html>
