Add Meyer css reset

--- a/index.html
+++ b/index.html
@@ -16,37 +16,37 @@
             </div>
             <span>Photo by <a href="https://www.pexels.com/photo/urban-photo-of-an-alley-2411688/">Aleksandar Pasaric</a></span>
         </section>
-        <section>
-           <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
-           <span>Sign up <em>now</em> to get started.</span> 
-           <p>You <em>know</em> you want to.</p>
+        <section class="content">
+           <p class="text">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
+           <span class="text">Sign up <em>now</em> to get started.</span> 
+           <p class="text">You <em>know</em> you want to.</p>
            <form action="#" method="post" class="form">
                 <h2>Let's do this!</h2>
                 <div class="input_wrapper">
                     <label for="name">First name</label>
-                    <input type="text" id="name" name="name">
+                    <input type="text" id="name" name="name" required>
                 </div>
                 <div class="input_wrapper">
                     <label for="surname">Last name</label>
-                    <input type="text" id="surname" name="surname">
+                    <input type="text" id="surname" name="surname" required>
                 </div>
                 <div class="input_wrapper">
                     <label for="email">Email</label>
-                    <input type="email" name="email" id="email">
+                    <input type="email" name="email" id="email" required>
                 </div>
                 <div class="input_wrapper">
                     <label for="number">Number</label>
-                    <input type="number" name="number" id="number">
+                    <input type="number" name="number" id="number" required>
                 </div>
                 <div class="input_wrapper">
                     <label for="password">Password</label>
-                    <input type="password" name="password" id="password">
+                    <input type="password" name="password" id="password" required>
                 </div>
                 <div class="input_wrapper">
                     <label for="conpassword">Confirm password</label>
-                    <input type="password" name="conpassword" id="conpassword">
+                    <input type="password" name="conpassword" id="conpassword" required>
                 </div>
-                <button type="submit" class="btn btn--primary"></button>
+                <button type="submit" class="btn btn--primary">Create account</button>
            </form>
         </section>
     </main>
