--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img src="" alt="logo">
                 <h1>Night</h1>
             </div>
-            <span>Photo by <a href="https://www.pexels.com/photo/urban-photo-of-an-alley-2411688/">Aleksandar Pasaric</a></span>
+            <span class="credit">Photo by <a href="https://www.pexels.com/photo/urban-photo-of-an-alley-2411688/">Aleksandar Pasaric</a></span>
         </section>
         <section class="content">
            <p class="text">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
