--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Rubik+Beastly&display=swap" rel="stylesheet">
     <title>Signup form</title>
 </head>
 <body>
     <main>
         <section class="lead">
             <div class="layer">
-                <img src="" alt="logo">
+                <img src="./assets/logo.jpg" alt="logo">
                 <h1>Night</h1>
             </div>
             <span class="credit">Photo by <a href="https://www.pexels.com/photo/urban-photo-of-an-alley-2411688/">Aleksandar Pasaric</a></span>
+            <span class="credit">Owl vector created by freepik - <a href="https://www.freepik.com/vectors/owl">www.freepik.com</a></span>
         </section>
         <section class="content">
            <p class="text">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
