Finish hero image styling

--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
     <main>
         <section class="lead">
             <div class="layer">
-                <img src="./assets/logo.jpg" alt="logo">
+                <img src="./assets/owl-svgrepo-com.svg" alt="logo" class="logo">
                 <h1>Night</h1>
             </div>
             <span class="credit">Photo by <a href="https://www.pexels.com/photo/urban-photo-of-an-alley-2411688/">Aleksandar Pasaric</a></span>
-            <span class="credit">Owl vector created by freepik - <a href="https://www.freepik.com/vectors/owl">www.freepik.com</a></span>
         </section>
         <section class="content">
            <p class="text">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
