Style the form section

--- a/index.html
+++ b/index.html
@@ -20,37 +20,43 @@
             <span class="credit">Photo by <a href="https://www.pexels.com/photo/urban-photo-of-an-alley-2411688/">Aleksandar Pasaric</a></span>
         </section>
         <section class="content">
-           <p class="text">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
-           <span class="text">Sign up <em>now</em> to get started.</span> 
-           <p class="text">You <em>know</em> you want to.</p>
-           <form action="#" method="post" class="form">
-                <h2>Let's do this!</h2>
-                <div class="input_wrapper">
-                    <label for="name">First name</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
-                <div class="input_wrapper">
-                    <label for="surname">Last name</label>
-                    <input type="text" id="surname" name="surname" required>
-                </div>
-                <div class="input_wrapper">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email" required>
-                </div>
-                <div class="input_wrapper">
-                    <label for="number">Number</label>
-                    <input type="number" name="number" id="number" required>
-                </div>
-                <div class="input_wrapper">
-                    <label for="password">Password</label>
-                    <input type="password" name="password" id="password" required>
-                </div>
-                <div class="input_wrapper">
-                    <label for="conpassword">Confirm password</label>
-                    <input type="password" name="conpassword" id="conpassword" required>
-                </div>
-                <button type="submit" class="btn btn--primary">Create account</button>
-           </form>
+           <div class="container">
+               <p class="text">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
+               <span class="text">Sign up <em>now</em> to get started.</span>
+               <p class="text">You <em>know</em> you want to.</p>
+               <h2 class="text">Let's do this!</h2>
+               <form action="#" method="post" class="form">
+                    <div class="input_wrapper">
+                        <label for="name">First name</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div class="input_wrapper">
+                        <label for="surname">Last name</label>
+                        <input type="text" id="surname" name="surname" required>
+                    </div>
+                    <div class="input_wrapper">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email" required>
+                    </div>
+                    <div class="input_wrapper">
+                        <label for="number">Number</label>
+                        <input type="tel" 
+                        name="number" 
+                        id="number" 
+                        pattern="^(?:(?:(?:(?:\+|00)\d{2})?[ -]?(?:(?:\(0?\d{2}\))|(?:0?\d{2})))?[ -]?(?:\d{3}[- ]?\d{2}[- ]?\d{2}|\d{2}[- ]?\d{2}[- ]?\d{3}|\d{7})|(?:(?:(?:\+|00)\d{2})?[ -]?\d{3}[ -]?\d{3}[ -]?\d{3}))$" 
+                        required>
+                    </div>
+                    <div class="input_wrapper">
+                        <label for="password">Password</label>
+                        <input type="password" name="password" id="password" required>
+                    </div>
+                    <div class="input_wrapper">
+                        <label for="conpassword">Confirm password</label>
+                        <input type="password" name="conpassword" id="conpassword" required>
+                    </div>
+                    <button type="submit" class="btn btn--primary">Create account</button>
+               </form>
+           </div>
         </section>
     </main>
     <script src="script.js"></script>
